--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -8,3 +8,47 @@ body {
   font-family: monospace;
   color: #1f2937;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Estilos para el scroll */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f3e2e8;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3c363b;
+  border-radius: 10px;
+  border: 2px solid #f3e2e8;
+}
+
+/* Estilos para el botón de WhatsApp */
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  z-index: 1000;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
+}
+
+.whatsapp-float img {
+  width: 50%;
+  height: 50%;
+}
